  - Fixed defect #687 Label season 0 as "Specials"
  - Fixed defect #688 index_sd.htm not transfered to output dir
  - Fixed defect #691 Episode images vanish in the skin after new episodes are added
  - Fixed defect #692 Null pointer exception when episode images are unavailable
  - Enhancement  #697 MovieMeterPlugin: download fanart based on IMDB id returned from moviemeter.nl

MovieJukebox 1.0.16 beta
------------------------
  - Enhancement  #113 Single series pages. If the mjb.singleSeriesPage=true the separate season index is generated for each series.
  - Enhancement  #171 View & download internet movie trailers
  - Enhancement  #231 Default skin details show TV episodes/parts list in compact form in order to avoid slow scrolling.
                      The episode names are shown in the dynamic status bar by selecting particular episode.
  - Enhancement  #308 Plugin for German Database ofdb.de
  - Enhancement  #321 Episode list in reverse order
  - Fixed defect #332 International characters from NFO
  - Fixed defect #383 UTF-8 Encoding for Movie object - Allows extended character sets in the movie details
  - Enahncement  #397 Episode image for TV show episodes downloaded from TheTVDB.com
  - Enhancement  #418 Option to exclude files without external subtitles
  - Enhancement  #421 Plugin for Swedish movie database filmdelta.se
  - Fixed defect #422 Encoding problems with link of accentuated categories or two words categories on Categories.html
  - Fixed defect #433 Local fanart not handled correctly for Unknown TV series
  - Enhancement  #435 User customizeable perspective angle
  - Fixed defect #436 If the mjb.homePage property is unspecified, a valid home page will be chosen
  - Enhancement  #437 Improvements to multi-episode file support.
  - Enhancement  #441 Ability to turn off internet scraping for an entire library
  - Enhancement  #442 Added proxy support