@@ -25,6 +25,7 @@ MovieJukebox 1.0.17 beta
   - Fixed defect #691 Episode images vanish in the skin after new episodes are added
   - Fixed defect #692 Null pointer exception when episode images are unavailable
   - Enhancement  #697 MovieMeterPlugin: download fanart based on IMDB id returned from moviemeter.nl
+  - Enhancement  #700 (Optionally) Recursively scan parent dirs (up to library root) for directory-level NFOs
 
 MovieJukebox 1.0.16 beta
 ------------------------
